--- a/src/less/components/_fonts.less
+++ b/src/less/components/_fonts.less
@@ -49,6 +49,12 @@
   .i-back2:before {
     content: "\e921";
   }
+  .i-close:before {
+    content: "\e923";
+  }
+  .i-stateman:before {
+    content: "\e922";
+  }
   .i-left-arrow:before {
     content: "\e91f";
   }
@@ -147,5 +153,4 @@
   }
   .i-vk:before {
     content: "\e91e";
-  }
-  
+  }  
