--- a/src/less/components/_stat.less
+++ b/src/less/components/_stat.less
@@ -8,8 +8,9 @@
     &_item{
 
         .hr{
-            border-top-width: 2px;
             margin: 1.5rem auto;
+            border-width: 0;
+            border-top-width: 2px;
         }
 
         @media (max-width: 63.975em){
@@ -19,7 +20,7 @@
 
     &_num{
         color: @main;
-        font-size: 4.25rem;
+        font-size: 3.125rem;
         font-family: 'AAntiqueTitulGr';
     }
 }
