--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -32,6 +32,8 @@
 @import 'components/_headings';
 @import 'components/_articles';
 @import 'components/_files';
+@import 'components/_modal';
+@import 'components/_margin';
 
 // Pages
 @import 'components/_page-header';
