--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -24,16 +24,15 @@ block content
 			.row
 				mixin box(img,title,text)
 					.columns.small-12.large-4
-						.box.flex.align-middle.text-center.shadow-light
-							.box_img
-								img(src=img, alt=title)
+						a(href='#').box.flex.align-middle.text-center.shadow-light
+							.box_img=img
 							div.box_section
 								.title.title_size-medium.title_color-dark=title
 								hr.hr.hr-gold.hr-mini(noshade)
 								p=text
-				+box('./templates/_ares/img/svg/recovery.svg','Экономические споры','Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Incidunt ut labore et dolore magnam aliquam quaerat voluptatem.')
-				+box('./templates/_ares/img/svg/arbitration.svg','Третейский суд','Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Incidunt ut labore et dolore magnam aliquam quaerat voluptatem.')
-				+box('./templates/_ares/img/svg/mediation.svg','Медиация','Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Incidunt ut labore et dolore magnam aliquam quaerat voluptatem.')
+				+box('','Экономические споры','Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Incidunt ut labore et dolore magnam aliquam quaerat voluptatem.')
+				+box('','Третейский суд','Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Incidunt ut labore et dolore magnam aliquam quaerat voluptatem.')
+				+box('','Медиация','Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Incidunt ut labore et dolore magnam aliquam quaerat voluptatem.')
 		section.main_about.section
 			.background_img.background_img-hammer
 			.background_img.background_img-libra
