--- a/src/pug/services_economic.pug
+++ b/src/pug/services_economic.pug
@@ -14,6 +14,8 @@ block content
                         | Экономические споры
                     hr.hr.hr-gold.hr-large(noshade)
     div.wrapper.wrapper_menu
+        - var wrapperTabs = ['Что мы предлагаем', 'Цены', 'Иск за 10 минут'];
+        include ./components/_tabs
         section.text.text_card.section
             .row
                 .columns.small-12
@@ -33,7 +35,7 @@ block content
                     .title.title_size-large.title_color-dark.title_main Порядок работы
             -var stepItems = [{"icon":"./templates/_ares/img/svg/heads.svg","num":"Шаг 1","text":"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "},{"icon":"./templates/_ares/img/svg/file_search.svg","num":"Шаг 2","text":"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "},{"icon":"./templates/_ares/img/svg/strategy.svg","num":"Шаг 3","text":"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "},{"icon":"./templates/_ares/img/svg/trophy.svg","num":"Шаг 4","text":"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "}];
             include ./components/_steps
-        section.stat.section
+        section.stat.section.patern
             -var statItems = [{"num":"1236","title":"Какое-то достижение"},{"num":">578","title":"Часов консультаций адвокатов"},{"num":"458","title":"Клиентов"},{"num":"1236","title":"Проведённых дел в суде"},{"num":"1236","title":"Какое-то достижение"}];
             include ./components/_stat
         section.text.text_card.section
